#58 Adjusting to changed secret mount path